--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.2.3"
+    "astro": "^2.2.3",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
