--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.2.3",
-    "clsx": "^1.2.1"
+    "astro": "^2.3.0",
+    "svelte": "^3.58.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
