--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v4",
   "description": "Portfolio v4",
   "type": "module",
-  "version": "0.0.1",
+  "version": "4.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,12 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.1.0",
-    "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.4.2",
-    "svelte": "^3.58.0"
+    "@astrojs/svelte": "^7.2.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.6",
+    "svelte": "^5.41.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^4.1.14"
   }
 }
